# pldl

./: README.md  pyproject.toml
src/pldl/: Config.py  Downloader.py  Formatter.py  MusicRepository.py  cli.py  config.json  legacy_code.py  main.py
src/pldl/core/: Config.py  Downloader.py  Formatter.py  MusicRepository.py  __init__.py
src/pldl/core/services/: AddPlaylistService.py  CdService.py  CloneService.py  PullService.py  RemovePlaylistService.py  StatusService.py  __init__.py
src/pldl/model/: Playlist.py  RemoteSong.py  __init__.py
