[project]
name = "pldl"
version = "0.1.0"
description = "Command line tool for downloading youtube music playlists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.12.8",
]

[project.scripts]
pldl = "pldl.main:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
